--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@ background: radial-gradient(circle, rgba(2,0,36,1) 23%, rgba(33,121,182,1) 61%, 
             <h2 style="color: rgb(203, 37, 22);">Education</h2>
             <ul>
                 <li style="color: purple"><strong style="color: rgb(203, 37, 22);">University </strong> - Governor house IT university (GIAIC) AND also student of SMIT</li>
-                <li style="color: purple"><strong style="color: rgb(203, 37, 22);">High School</strong> - Government Girls Higher Secondary School</li>
+                <li style="color: purple"><strong style="color: rgb(203, 37, 22);">Bs Pak Studies from</strong> - Allama Iqbal Open University</li>
+            </ul></li>
             </ul>
         </section>
 
